@@ -27,25 +27,29 @@
          the project -->
     <profiles>
         <profile>
+            <id>local</id>
+            <properties>
+                <spring.profiles.active>local</spring.profiles.active>
+            </properties>
+        </profile>
+        <profile>
             <id>dev</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
             <properties>
                 <spring.profiles.active>dev</spring.profiles.active>
             </properties>
         </profile>
+        <!-- Profile used for CI/CD testing, with H2 embedded database -->
         <profile>
-            <id>test</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
+            <id>ci</id>
             <properties>
-                <spring.profiles.active>test</spring.profiles.active>
+                <spring.profiles.active>ci</spring.profiles.active>
             </properties>
         </profile>
         <profile>
             <id>prod</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <properties>
                 <spring.profiles.active>prod</spring.profiles.active>
             </properties>
@@ -64,10 +68,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <compilerArguments> --enable-preview </compilerArguments>
-                    <jvmArguments> --enable-preview</jvmArguments>
-                </configuration>
                 <executions>
                     <execution>
                         <goals>
@@ -86,22 +86,7 @@
                         <buildArg> --enable-native-access=ALL-UNNAMED </buildArg>
                         <buildArg> -H:+ForeignAPISupport</buildArg>
                         <buildArg> -H:+UnlockExperimentalVMOptions</buildArg>
-                        <buildArg> --enable-preview</buildArg>
                     </buildArgs>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <enablePreview>true</enablePreview>
                 </configuration>
             </plugin>
             <plugin>
